[package]
name = "imgc"
version = "0.0.0-git"
edition = "2024"
authors = ["Duy NG <hi@tduyng.com>", "Daniel Gunzinger <daniel.gunzinger@posteo.de>"]
description = "A configurable and efficient batch image converter written in Rust."
license = "MIT"
documentation = "https://docs.rs/imgc"
homepage = "https://github.com/tduyng/imgc-rs"
repository = "https://github.com/tduyng/imgc-rs"
keywords = ["CLI", "image", "conversion", "webp", "avif"]
readme = "README.md"
categories = [
    "command-line-utilities",
    "multimedia::images",
    "multimedia::encoding",
]
include = [
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "/src/**/*.rs",
    "build.rs"
]
default-run = "imgc"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
glob = "0.3.2"
#image = {version = "0.25.6", features = ["avif-native"] } # problematic on windows
image = {version = "0.25.6"}
rayon = "1.10.0"
webp = "0.3"
ravif = "0.12.0"
rgb = "0.8.50"
indicatif = {version = "*", features = ["rayon"]}
bytesize = "2.0.1"

[build-dependencies]
cargo_metadata = "0.20.0"

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = 3
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
lto = true
strip = true
codegen-units = 16
rpath = false

[profile.dev.package."*"]
opt-level = 2

[badges]
maintenance = { status = "actively-developed" }
